Add updated reference files
Update exam report

--- a/first/Marco_Casari_first_part.ipynb
+++ b/first/Marco_Casari_first_part.ipynb
@@ -77,6 +77,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Questions\n",
+    "- Do I have to reproduce also each intermediate passage, e.g. to obtain the GINsim network from gene list file?\n",
+    "- Do we need to know all the biological aspects (e.g. each pathway) or few examples are sufficient?\n",
+    "- Is it sufficient to send the work by email?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Keywords\n",
+    "- wild type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prostate Boolean model construction\n",
+    "The Boolean model is constructed starting from biological information available in literature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
