--- a/first/Marco_Casari_first_part.ipynb
+++ b/first/Marco_Casari_first_part.ipynb
@@ -5,93 +5,9 @@
    "metadata": {},
    "source": [
     "# Introduction to data analysis for natural and social sciences\n",
+    "This notebook contitutes the first part of the exam.\n",
     "\n",
-    "## Exam first part"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Patient-specific Boolean models of signalling networks guide personalised treatments\n",
-    "Additional files at page 24.\n",
-    "Appendix at page 31.\n",
-    "\n",
-    "## Prostate Boolean model construction\n",
-    "Results: 3\n",
-    "\n",
-    "Appendix: 31\n",
-    "\n",
-    "## Prostate Boolean model simulation\n",
-    "Results: 6\n",
-    "\n",
-    "Appendix: 36\n",
-    "\n",
-    "## Personalisation of the prostate Boolean model\n",
-    "Results: 6\n",
-    "\n",
-    "Appendix: 37\n",
-    "\n",
-    "## Personalised drug predictions of TCGA Boolean models\n",
-    "Results: 7\n",
-    "\n",
-    "Appendix: 39\n",
-    "\n",
-    "## Personalised drug predictions of LNCaP Boolean model\n",
-    "Results: 9\n",
-    "\n",
-    "Appendix: 41\n",
-    "\n",
-    "## Experimental validation of predicted targets\n",
-    "Results: 10\n",
-    "\n",
-    "Appendix: 42\n",
-    "\n",
-    "## Experimental validation of drugs in LNCaP\n",
-    "Results: 12\n",
-    "\n",
-    "Appendix: 43"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Software\n",
-    "\n",
-    "## Initial generic network extension\n",
-    "ROMA\n",
-    "OmniPath\n",
-    "\n",
-    "GINsim\n",
-    "\n",
-    "## Datasets\n",
-    "TGCA\n",
-    "GDSC\n",
-    "\n",
-    "## Network visualization\n",
-    "Cytoscape\n",
-    "\n",
-    "## Model simulation\n",
-    "MaBoSS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Questions\n",
-    "- Do I have to reproduce also each intermediate passage, e.g. to obtain the GINsim network from gene list file?\n",
-    "- Do we need to know all the biological aspects (e.g. each pathway) or few examples are sufficient?\n",
-    "- Is it sufficient to send the work by email?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Keywords\n",
-    "- wild type"
+    "Here the steps of article \"Patient-specific Boolean models of signalling networks guide personalised treatments\" are retraced and the results reproduced."
    ]
   },
   {
