Start Boolean model construction

--- a/first/Marco_Casari_first_part.ipynb
+++ b/first/Marco_Casari_first_part.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Montagud2022_Prostate_Cancer.bnd\n",
+      "Montagud2022_Prostate_Cancer.cfg\n",
+      "Montagud2022_Prostate_Cancer.zginml\n",
+      "elife-72626-v2.pdf\n",
+      "supplementary_files\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "# MC delete this cell at the end, as it is just for interfacing with the underlying linux environment.\n",
+    "ls ./report"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +31,31 @@
     "This notebook contitutes the first part of the exam.\n",
     "\n",
     "Here the steps of article \"Patient-specific Boolean models of signalling networks guide personalised treatments\" are retraced and the results reproduced."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports and global settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_REPORT = \"report\""
    ]
   },
   {
