Import data on nodes

--- a/first/Marco_Casari_first_part.ipynb
+++ b/first/Marco_Casari_first_part.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,6 +12,8 @@
       "Montagud2022_Prostate_Cancer.bnd\n",
       "Montagud2022_Prostate_Cancer.cfg\n",
       "Montagud2022_Prostate_Cancer.zginml\n",
+      "Montagud2022_interactions_sources.xlsx\n",
+      "Montagud2022_nodes in pathways.xlsx\n",
       "elife-72626-v2.pdf\n",
       "supplementary_files\n"
      ]
@@ -20,7 +22,7 @@
    "source": [
     "%%sh\n",
     "# MC delete this cell at the end, as it is just for interfacing with the underlying linux environment.\n",
-    "ls ./report"
+    "ls report/"
    ]
   },
   {
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,49 @@
    "metadata": {},
    "source": [
     "# Prostate Boolean model construction\n",
-    "The Boolean model is constructed starting from biological information available in literature."
+    "The Boolean model is constructed starting from information available in literature. Then further pathways are identified by the use of software ROMA and pypath and they are added to the existing network.\n",
+    "\n",
+    "The authors collected all the information on the network such as nodes, their role, logical rules etc. in Excel files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_nodes_pathways = \"Montagud2022_nodes in pathways.xlsx\"\n",
+    "f_nodes_interactions = \"Montagud2022_interactions_sources.xlsx\"\n",
+    "f_nodes_unique = \"Montagud2022_interactions_sources.xlsx\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data are loaded in Pandas dataframe to ease their manipulation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nodes_pathways = pd.read_excel(\n",
+    "    io=f\"{PATH_REPORT}/{f_nodes_pathways}\",\n",
+    "    header=None,\n",
+    "    names=[\"node\", \"pathway\"]\n",
+    ")\n",
+    "df_nodes_interactions = pd.read_excel(\n",
+    "    io=f\"{PATH_REPORT}/{f_nodes_interactions}\",\n",
+    "    sheet_name=\"Nodes\",\n",
+    "    header=1\n",
+    ")\n",
+    "df_nodes_unique = pd.read_excel(\n",
+    "    io=f\"{PATH_REPORT}/{f_nodes_unique}\",\n",
+    "    sheet_name=\"Nodes_unique\"\n",
+    ")"
    ]
   },
   {
