Complete import export nodes data
Solve problem of missing nodes in unique nodes file

--- a/first/Marco_Casari_first_part.ipynb
+++ b/first/Marco_Casari_first_part.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,12 @@
     "# Prostate Boolean model construction\n",
     "The Boolean model is constructed starting from information available in literature. Then further pathways are identified by the use of software ROMA and pypath and they are added to the existing network.\n",
     "\n",
-    "The authors collected all the data regarding the network such as nodes, their role, logical rules etc. in the two following Excel files:"
+    "The authors collected all the data regarding the network, such as nodes, their role, logical rules, in the two following Excel files:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,20 +101,24 @@
     "    header=None,\n",
     "    names=[\"node\", \"pathway\"]\n",
     ")\n",
+    "\n",
+    "sheet_interactions = \"Nodes\"\n",
     "df_nodes_interactions = pd.read_excel(\n",
     "    io=f\"{PATH_REPORT}/{f_nodes_network}\",\n",
-    "    sheet_name=\"Nodes\",\n",
+    "    sheet_name=sheet_interactions,\n",
     "    header=1\n",
     ")\n",
+    "\n",
+    "sheet_unique=\"Nodes_unique\"\n",
     "df_nodes_unique = pd.read_excel(\n",
     "    io=f\"{PATH_REPORT}/{f_nodes_network}\",\n",
-    "    sheet_name=\"Nodes_unique\"\n",
+    "    sheet_name=sheet_unique\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,13 +139,13 @@
     }
    ],
    "source": [
-    "# MC info.\n",
+    "# MC debug.\n",
     "print(df_nodes_pathways.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,13 +171,13 @@
     }
    ],
    "source": [
-    "# MC info.\n",
+    "# MC debug.\n",
     "print(df_nodes_interactions.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -397,19 +401,20 @@
        "[133 rows x 5 columns]"
       ]
      },
-     "execution_count": 59,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# One single logical rule is associated to each node, in fact the result of grouping by node and rule is a list of exactly 133 rows.\n",
-    "df_nodes_interactions.groupby([\"Target node\", \"Logical rule\"]).count()"
+    "# One single logical rule is associated to each node, indeed the result of grouping by node and rule is a list of exactly 133 rows.\n",
+    "df_count = df_nodes_interactions.groupby([\"Target node\", \"Logical rule\"]).count()\n",
+    "display(df_count)\n",
+    "del df_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -434,37 +439,291 @@
     }
    ],
    "source": [
-    "# MC info.\n",
+    "# MC debug.\n",
     "print(df_nodes_unique.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pathway</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>node</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Acidosis</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Androgen</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carcinogen</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EGF</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FGF</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fused_event</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hypoxia</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nutrients</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SPOP</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TGFb</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TNFalpha</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            pathway\n",
+       "node               \n",
+       "Acidosis      Input\n",
+       "Androgen      Input\n",
+       "Carcinogen    Input\n",
+       "EGF           Input\n",
+       "FGF           Input\n",
+       "fused_event   Input\n",
+       "Hypoxia       Input\n",
+       "Nutrients     Input\n",
+       "SPOP          Input\n",
+       "TGFb          Input\n",
+       "TNFalpha      Input"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pathway</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>node</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Acidosis</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Androgen</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Apoptosis</th>\n",
+       "      <td>Output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carcinogen</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DNA_Damage</th>\n",
+       "      <td>DNA repair pathw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DNA_Repair</th>\n",
+       "      <td>Output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EMT</th>\n",
+       "      <td>Invasion pathw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hypoxia</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Invasion</th>\n",
+       "      <td>Output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metastasis</th>\n",
+       "      <td>Output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Migration</th>\n",
+       "      <td>Output</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nutrients</th>\n",
+       "      <td>Input</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Proliferation</th>\n",
+       "      <td>Output</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        pathway\n",
+       "node                           \n",
+       "Acidosis                  Input\n",
+       "Androgen                  Input\n",
+       "Apoptosis                Output\n",
+       "Carcinogen                Input\n",
+       "DNA_Damage     DNA repair pathw\n",
+       "DNA_Repair               Output\n",
+       "EMT              Invasion pathw\n",
+       "Hypoxia                   Input\n",
+       "Invasion                 Output\n",
+       "Metastasis               Output\n",
+       "Migration                Output\n",
+       "Nutrients                 Input\n",
+       "Proliferation            Output"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"['MAX'] not found in axis\"\n"
+     ]
+    }
+   ],
    "source": [
-    "# MC why df_nodes_unique contains only 121 nodes and not 133?\n",
-    "# MC removing input (11 nodes) and output (6 nodes) it should be 133 - 11 - 6 = 116.\n",
-    "# MC probably only inputs are removed, but it is not good anyway because 133 - 11 = 122, where is the one node I am not removing?"
+    "# df_nodes_unique contains only 121 nodes and not 133 as df_nodes_pathways.\n",
+    "# In other words, df_nodes_unique[\"Node\"] should be a subset of df_nodes_pathways[\"node\"]. Why?\n",
+    "df = df_nodes_pathways.set_index(\"node\")\n",
+    "df_subset = df_nodes_unique.set_index(\"Node\")\n",
+    "\n",
+    "# The input nodes should be all removed, since they are not regulated by authors' choice,\n",
+    "# hence they are not part of any pathway. But this is not what happens.\n",
+    "display(df.loc[df[\"pathway\"] == \"Input\"])\n",
+    "display(df.drop(labels=df_subset.index, errors=\"ignore\"))\n",
+    "\n",
+    "# Moreover, in df_nodes_unique there is a node called MAX which is not part of the nodes considered for the final network.\n",
+    "# Surprisingly, it is not present among the nodes in df_nodes_interactions.\n",
+    "try:\n",
+    "    df.drop(labels=df_subset.index)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "finally:\n",
+    "    del df\n",
+    "    del df_subset\n",
+    "\n",
+    "# In conclusion, it seems that the choice of nodes from the Excel files can not be deduced directly\n",
+    "# just from the observation of the content of the files.\n",
+    "# In particular, I should use data in df_nodes_unique with caution\n",
+    "# since their relation with the other data is not straightforward."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data about nodes are then exported in files with tab-separated values (TSV) format, to import them in Cytoscape."
+    "Data about nodes are then exported in files with tab-separated values (TSV) format, to import them in Cytoscape in a later time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MC useful for export.\n",
-    "f_nodes_pathways.removesuffix(f\".{EXT_EXCEL}\")\n",
-    "# MC see also https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_csv.html"
+    "name_nodes_pathways = f_nodes_pathways.removesuffix(f\".{EXT_EXCEL}\")\n",
+    "name_nodes_network = f_nodes_network.removesuffix(f\".{EXT_EXCEL}\")\n",
+    "\n",
+    "df_nodes_pathways.to_csv(\n",
+    "    path_or_buf=f\"{name_nodes_pathways}.{EXT_TAB}\",\n",
+    "    sep='\\t'\n",
+    ")\n",
+    "df_nodes_interactions.to_csv(\n",
+    "    path_or_buf=f\"{name_nodes_network}_{sheet_interactions}.{EXT_TAB}\",\n",
+    "    sep='\\t'\n",
+    ")\n",
+    "df_nodes_unique.to_csv(\n",
+    "    path_or_buf=f\"{name_nodes_network}_{sheet_unique}.{EXT_TAB}\",\n",
+    "    sep='\\t'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prostate Boolean model simulation"
    ]
   }
  ],
