Start adding more context

--- a/first/Marco_Casari_first_part.ipynb
+++ b/first/Marco_Casari_first_part.ipynb
@@ -5,16 +5,17 @@
    "metadata": {},
    "source": [
     "# Introduction to data analysis for natural and social sciences\n",
-    "This notebook contitutes the first part of the exam. Here the initial simulations in article \"Patient-specific Boolean models of signalling networks guide personalised treatments\" are performed and some results regarding Boolean models reproduced.\n",
+    "The present notebook contitutes the first part of the exam. Data and initial simulations of article \"Patient-specific Boolean models of signalling networks guide personalised treatments\" are partially analysed and reproduced.\n",
     "\n",
-    "Referenced content and data belong to version 2 of the article, published April 18, 2022."
+    "Notebook content is based on version 2 of the article, published April 18, 2022 (DOI: https://doi.org/10.7554/eLife.72626)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports and global settings"
+    "## Imports and global settings\n",
+    "The notebook uses software bioLQM and GINsim to perform operations on the Boolean model. They are accessed through the available Python interface."
    ]
   },
   {
@@ -40,7 +41,18 @@
    "metadata": {},
    "source": [
     "# Prostate Boolean model construction\n",
-    "The Boolean model is constructed starting from information available in literature. Then further pathways are identified by the use of software ROMA and pypath and they are added to the existing network.\n",
+    "The prostate Boolean model is built starting from information available in existing literature. A generic cancer Boolean network is used as baseline, which contains information on pathways and interactions between nodes of the underlying signalling network which are commonly found in turmors.\n",
+    "\n",
+    "MC explain what are nodes of the network: genes, proteins, conditions, expression factors.\n",
+    "\n",
+    "Then the initial model is enriched with prostate cancer-specific information, e.g. genes, pathways. Software ROMA is used to identify new pathways from transcriptomics and proteomics data, by selecting the highly variable genes for each pathway. Transcriptomics data was gathered from TCGA database selecting gene sets related to cancer database. MC what? pagina 3.\n",
+    "\n",
+    "Database OmniPath is used to establish connections between genes present in the model and proteins known to have a function in prostate or found with ROMA.\n",
+    "\n",
+    "andabout interactions between genes and generic cancer Boolean models. The underlying signaling network\n",
+    "\n",
+    "\n",
+    "Then further pathways are identified by the use of software ROMA and pypath and they are added to the existing network.\n",
     "\n",
     "The authors collected all data regarding the network, such as nodes, their role, logical rules, in the two following Excel files:"
    ]
@@ -78,7 +90,7 @@
     "    io=f\"{PATH_REPORT}/{fname_nodes_network}\",\n",
     "    sheet_name=sheet_interactions,\n",
     "    header=1,\n",
-    "    converters={\"Reference: PMID\": lambda c: np.str_(c).strip()}  # Remove a useless line break in a cell.\n",
+    "    converters={\"Reference: PMID\": lambda c: np.str_(c).strip()}  # Remove useless line breaks in cells.\n",
     ")\n",
     "sheet_unique=\"Nodes_unique\"\n",
     "df_nodes_unique = pd.read_excel(\n",
@@ -111,13 +123,10 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "tags": [
-     "remove-cell"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# MC debug, remove in v0.2.0\n",
     "# df_nodes_unique contains only 121 nodes and not 133 as df_nodes_pathways.\n",
     "# In other words, df_nodes_unique[\"Node\"] should be a subset of df_nodes_pathways[\"node\"].\n",
     "# Why is that? Let's find out.\n",
@@ -720,7 +729,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
